--- a/index.html
+++ b/index.html
@@ -1,63 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuadrilateralesMeshing</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QuadrilateralesMeshing</title>
+  <link rel="stylesheet" href="/Frontend/src/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
+
 <body>
-    <main>
-        <div class="left-block">
-          <div class="colors">
-            <button type="button" value="#0000ff"></button>
-            <button type="button" value="#009fff"></button>
-            <button type="button" value="#0fffff"></button>
-            <button type="button" value="#bfffff"></button>
-            <button type="button" value="#000000"></button>
-            <button type="button" value="#333333"></button>
-            <button type="button" value="#666666"></button>
-            <button type="button" value="#999999"></button>
-            <button type="button" value="#ffcc66"></button>
-            <button type="button" value="#ffcc00"></button>
-            <button type="button" value="#ffff00"></button>
-            <button type="button" value="#ffff99"></button>
-            <button type="button" value="#003300"></button>
-            <button type="button" value="#555000"></button>
-            <button type="button" value="#00ff00"></button>
-            <button type="button" value="#99ff99"></button>
-            <button type="button" value="#f00000"></button>
-            <button type="button" value="#ff6600"></button>
-            <button type="button" value="#ff9933"></button>
-            <button type="button" value="#f5deb3"></button>
-            <button type="button" value="#330000"></button>
-            <button type="button" value="#663300"></button>
-            <button type="button" value="#cc6600"></button>
-            <button type="button" value="#deb887"></button>
-            <button type="button" value="#aa0fff"></button>
-            <button type="button" value="#cc66cc"></button>
-            <button type="button" value="#ff66ff"></button>
-            <button type="button" value="#ff99ff"></button>
-            <button type="button" value="#e8c4e8"></button>
-            <button type="button" value="#ffffff"></button>
-          </div>
-          <div class="brushes">
-            <button type="button" value="1"></button>
-            <button type="button" value="2"></button>
-            <button type="button" value="3"></button>
-            <button type="button" value="4"></button>
-            <button type="button" value="5"></button>
-          </div>
-          <div class="buttons">
-            <button id="clear" type="button">Clear</button>
-            <button id="save" type="button">Save</button>
+  <header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        </ul>
+
+        <div class="text-end">
+          <button type="button" class="btn btn-outline-light me-2">Login</button>
+          <button type="button" class="btn btn-warning">Sign-up</button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div class="p-1"></div>
+  <main>
+
+
+    <div class="container">
+      <div class="row flex-row-reverse align-items-center">
+        <div class="col-8 ">
+            <canvas  class="border" id="paint-canvas" height="400px" width="500px"></canvas>
+        </div>
+        <div class="col-4">
+          <div class="left-block">
+            <div class="colors">
+              <button type="button" value="#0000ff"></button>
+              <button type="button" value="#009fff"></button>
+              <button type="button" value="#0fffff"></button>
+              <button type="button" value="#bfffff"></button>
+              <button type="button" value="#000000"></button>
+              <button type="button" value="#333333"></button>
+              <button type="button" value="#666666"></button>
+              <button type="button" value="#999999"></button>
+              <button type="button" value="#ffcc66"></button>
+              <button type="button" value="#ffcc00"></button>
+              <button type="button" value="#ffff00"></button>
+              <button type="button" value="#ffff99"></button>
+              <button type="button" value="#003300"></button>
+              <button type="button" value="#555000"></button>
+              <button type="button" value="#00ff00"></button>
+              <button type="button" value="#99ff99"></button>
+              <button type="button" value="#f00000"></button>
+              <button type="button" value="#ff6600"></button>
+              <button type="button" value="#ff9933"></button>
+              <button type="button" value="#f5deb3"></button>
+              <button type="button" value="#330000"></button>
+              <button type="button" value="#663300"></button>
+              <button type="button" value="#cc6600"></button>
+              <button type="button" value="#deb887"></button>
+              <button type="button" value="#aa0fff"></button>
+              <button type="button" value="#cc66cc"></button>
+              <button type="button" value="#ff66ff"></button>
+              <button type="button" value="#ff99ff"></button>
+              <button type="button" value="#e8c4e8"></button>
+              <button type="button" value="#ffffff"></button>
+            </div>
+            <div class="brushes">
+              <button type="button" value="1"></button>
+              <button type="button" value="2"></button>
+              <button type="button" value="3"></button>
+              <button type="button" value="4"></button>
+              <button type="button" value="5"></button>
+            </div>
+            <div class="buttons">
+              <button id="clear" type="button">Clear</button>
+              <button id="save" type="button">Save</button>
+            </div>
           </div>
         </div>
-        <div class="right-block">
-          <canvas id="paint-canvas" width="640" height="400"></canvas>
-        </div>
-      </main>
-      <script src="index.js"></script>
+      </div>
+    </div>
+
+    
+    
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="/Frontend/index.js"></script>
 </body>
+
 </html>
