--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QuadrilateralesMeshing</title>
   <link rel="stylesheet" href="/Frontend/src/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDjmBfkPr9sLUv5TnWv2UgbSzeoITTdLII",
+      authDomain: "swt-g00.firebaseapp.com",
+      projectId: "swt-g00",
+      storageBucket: "swt-g00.appspot.com",
+      messagingSenderId: "645331833750",
+      appId: "1:645331833750:web:5da5b7a69c029b057d03b7"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </head>
 
 <body>
+
+
   <header class="p-3 text-bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -37,7 +59,7 @@
     <div class="container">
       <div class="row flex-row-reverse align-items-center">
         <div class="col-8 ">
-            <canvas  class="border" id="paint-canvas" height="400px" width="500px"></canvas>
+          <canvas class="border" id="paint-canvas" height="400px" width="500px"></canvas>
         </div>
         <div class="col-4">
           <div class="left-block">
@@ -89,11 +111,13 @@
       </div>
     </div>
 
-    
-    
+
+
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <script src="/Frontend/index.js"></script>
 </body>
 
