--- a/Frontend/pages/pricing.html
+++ b/Frontend/pages/pricing.html
@@ -13,8 +13,8 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="../index.js" class="nav-link px-2 text-white">Home</a></li>
               <li><a href="./features.html" class="nav-link px-2 text-white">Features</a></li>
-              <li><a href="./pricing.html" class="nav-link px-2 text-white">Pricing</a></li>
-              <li><a href="./about.html" class="nav-link px-2 text-secondary">About</a></li>
+              <li><a href="./pricing.html" class="nav-link px-2 text-secondary">Pricing</a></li>
+              <li><a href="./about.html" class="nav-link px-2 text-white">About</a></li>
             </ul>
     
             <div class="text-end">
