--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 </head>
 
 <body>
-
-
-  <header class="p-3 text-bg-light" >
+  <header class="p-3 text-bg-light">
     <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <div id="navBar" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start p-2">
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="./index.html" class="nav-link px-2 text-primary">Home</a></li>
-          <li><a href="./Frontend/pages/features.html" class="nav-link px-2 text-info">Features</a></li>
-          <li><a href="./Frontend/pages/pricing.html" class="nav-link px-2 text-info">Pricing</a></li>
-          <li><a href="./Frontend/pages/about.html" class="nav-link px-2 text-info">About</a></li>
+          <li><a href="./Frontend/pages/features.html" class="nav-link px-2 text-dark">Features</a></li>
+          <li><a href="./Frontend/pages/pricing.html" class="nav-link px-2 text-dark">Pricing</a></li>
+          <li><a href="./Frontend/pages/about.html" class="nav-link px-2 text-dark">About</a></li>
         </ul>
 
         <div class="text-end">
@@ -52,24 +50,23 @@
     </div>
   </header>
   <div class="p-3"></div>
+
+
   <main>
-
-
     <div class="container">
-      <div class="row flex-row-reverse align-items-center">
-        <div class="col-8 ">
-          <canvas class=" " id="paint-canvas" height="400px" width="500px" style="border: 5px var(--bs-info-border-subtle) solid"></canvas>
-        </div>
-        <div class="col-4">
+      <div class="row flex-row align-items-center justify-content-center ">
+        <div class="col">
           <div>
             <h1 class="text-primary">Quadrilaterales</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
           </div>
-          <div class="buttons row">
+          <div class="row">
             <button id="clear" class="btn btn-secondary">Clear</button>
-            <div class="p-1"></div>
             <button id="save" class="btn btn-info">Save</button>
           </div>
+        </div>
+        <div class="col">
+          <canvas class=" row" id="paint-canvas" height="450px" width="650px"></canvas>
         </div>
       </div>
     </div>
