--- a/index.html
+++ b/index.html
@@ -8,26 +8,6 @@
   <link rel="stylesheet" href="./Frontend/src/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDjmBfkPr9sLUv5TnWv2UgbSzeoITTdLII",
-      authDomain: "swt-g00.firebaseapp.com",
-      projectId: "swt-g00",
-      storageBucket: "swt-g00.appspot.com",
-      messagingSenderId: "645331833750",
-      appId: "1:645331833750:web:5da5b7a69c029b057d03b7"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-  </script>
 </head>
 
 <body>
@@ -54,24 +34,51 @@
 
   <main>
     <div class="container">
-      <div class="row flex-row align-items-center justify-content-center ">
-        <div class="col">
+      <div class="row justify-content-center ">
+        <div class="col-4 container align-self-center">
           <div>
             <h1 class="text-primary">Quadrilaterales</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+            <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
           </div>
           <div class="row">
             <button id="clear" class="btn btn-secondary">Clear</button>
             <button id="save" class="btn btn-info">Save</button>
           </div>
         </div>
-        <div class="col">
-          <canvas class=" row" id="paint-canvas" height="450px" width="650px"></canvas>
+        <div class="col-8">
+          <canvas class="" id="paint-canvas" height="450px" width="610px"></canvas>
         </div>
       </div>
     </div>
 
 
+    
+      <!--FOOTER-->
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24">
+                <use xlink:href="#bootstrap"></use>
+              </svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+          </div>
+    
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#twitter"></use>
+                </svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#instagram"></use>
+                </svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+                  <use xlink:href="#facebook"></use>
+                </svg></a></li>
+          </ul>
+        </footer>
+      </div>
 
   </main>
 
